Package_Tools/glib/Package_Tools/include-C/glib-2.0/glib/in_arbeit/gvarianttype.pp


function g_variant_type_string_is_valid(type_string:Pgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_type_string_scan(_string:Pgchar; limit:Pgchar; endptr:PPgchar):Tgboolean;cdecl;external;
{ create/destroy  }
procedure g_variant_type_free(_type:PGVariantType);cdecl;external;
(* Const before type ignored *)
function g_variant_type_copy(_type:PGVariantType):PGVariantType;cdecl;external;
(* Const before type ignored *)
function g_variant_type_new(type_string:Pgchar):PGVariantType;cdecl;external;
{ getters  }
(* Const before type ignored *)
function g_variant_type_get_string_length(_type:PGVariantType):Tgsize;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_type_peek_string(_type:PGVariantType):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_variant_type_dup_string(_type:PGVariantType):Pgchar;cdecl;external;
{ classification  }
(* Const before type ignored *)
function g_variant_type_is_definite(_type:PGVariantType):Tgboolean;cdecl;external;
(* Const before type ignored *)
function g_variant_type_is_container(_type:PGVariantType):Tgboolean;cdecl;external;
(* Const before type ignored *)
function g_variant_type_is_basic(_type:PGVariantType):Tgboolean;cdecl;external;
(* Const before type ignored *)
function g_variant_type_is_maybe(_type:PGVariantType):Tgboolean;cdecl;external;
(* Const before type ignored *)
function g_variant_type_is_array(_type:PGVariantType):Tgboolean;cdecl;external;
(* Const before type ignored *)
function g_variant_type_is_tuple(_type:PGVariantType):Tgboolean;cdecl;external;
(* Const before type ignored *)
function g_variant_type_is_dict_entry(_type:PGVariantType):Tgboolean;cdecl;external;
(* Const before type ignored *)
function g_variant_type_is_variant(_type:PGVariantType):Tgboolean;cdecl;external;
{ for hash tables  }
function g_variant_type_hash(_type:Tgconstpointer):Tguint;cdecl;external;
function g_variant_type_equal(type1:Tgconstpointer; type2:Tgconstpointer):Tgboolean;cdecl;external;
{ subtypes  }
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_type_is_subtype_of(_type:PGVariantType; supertype:PGVariantType):Tgboolean;cdecl;external;
{ type iterator interface  }
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_type_element(_type:PGVariantType):PGVariantType;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_type_first(_type:PGVariantType):PGVariantType;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_type_next(_type:PGVariantType):PGVariantType;cdecl;external;
(* Const before type ignored *)
function g_variant_type_n_items(_type:PGVariantType):Tgsize;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_type_key(_type:PGVariantType):PGVariantType;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_type_value(_type:PGVariantType):PGVariantType;cdecl;external;
{ constructors  }
(* Const before type ignored *)
function g_variant_type_new_array(element:PGVariantType):PGVariantType;cdecl;external;
(* Const before type ignored *)
function g_variant_type_new_maybe(element:PGVariantType):PGVariantType;cdecl;external;
(* Const before type ignored *)
(* Const before declarator ignored *)
function g_variant_type_new_tuple(items:PPGVariantType; length:Tgint):PGVariantType;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_type_new_dict_entry(key:PGVariantType; value:PGVariantType):PGVariantType;cdecl;external;
{< private > }
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_type_checked_(type_string:Pgchar):PGVariantType;cdecl;external;
(* Const before type ignored *)
function g_variant_type_string_get_depth_(type_string:Pgchar):Tgsize;cdecl;external;
{$endif}
{ __G_VARIANT_TYPE_H__  }

implementation

{ was #define dname def_expr }
function G_VARIANT_TYPE_BOOLEAN : PGVariantType;
  begin
    G_VARIANT_TYPE_BOOLEAN:=PGVariantType('b');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_BYTE : PGVariantType;
  begin
    G_VARIANT_TYPE_BYTE:=PGVariantType('y');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_INT16 : PGVariantType;
  begin
    G_VARIANT_TYPE_INT16:=PGVariantType('n');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_UINT16 : PGVariantType;
  begin
    G_VARIANT_TYPE_UINT16:=PGVariantType('q');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_INT32 : PGVariantType;
  begin
    G_VARIANT_TYPE_INT32:=PGVariantType('i');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_UINT32 : PGVariantType;
  begin
    G_VARIANT_TYPE_UINT32:=PGVariantType('u');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_INT64 : PGVariantType;
  begin
    G_VARIANT_TYPE_INT64:=PGVariantType('x');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_UINT64 : PGVariantType;
  begin
    G_VARIANT_TYPE_UINT64:=PGVariantType('t');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_DOUBLE : PGVariantType;
  begin
    G_VARIANT_TYPE_DOUBLE:=PGVariantType('d');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_STRING : PGVariantType;
  begin
    G_VARIANT_TYPE_STRING:=PGVariantType('s');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_OBJECT_PATH : PGVariantType;
  begin
    G_VARIANT_TYPE_OBJECT_PATH:=PGVariantType('o');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_SIGNATURE : PGVariantType;
  begin
    G_VARIANT_TYPE_SIGNATURE:=PGVariantType('g');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_VARIANT : PGVariantType;
  begin
    G_VARIANT_TYPE_VARIANT:=PGVariantType('v');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_HANDLE : PGVariantType;
  begin
    G_VARIANT_TYPE_HANDLE:=PGVariantType('h');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_UNIT : PGVariantType;
  begin
    G_VARIANT_TYPE_UNIT:=PGVariantType('()');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_ANY : PGVariantType;
  begin
    G_VARIANT_TYPE_ANY:=PGVariantType('*');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_BASIC : PGVariantType;
  begin
    G_VARIANT_TYPE_BASIC:=PGVariantType('?');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_MAYBE : PGVariantType;
  begin
    G_VARIANT_TYPE_MAYBE:=PGVariantType('m*');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_ARRAY : PGVariantType;
  begin
    G_VARIANT_TYPE_ARRAY:=PGVariantType('a*');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_TUPLE : PGVariantType;
  begin
    G_VARIANT_TYPE_TUPLE:=PGVariantType('r');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_DICT_ENTRY : PGVariantType;
  begin
    G_VARIANT_TYPE_DICT_ENTRY:=PGVariantType('{?*}');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_DICTIONARY : PGVariantType;
  begin
    G_VARIANT_TYPE_DICTIONARY:=PGVariantType('a{?*}');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_STRING_ARRAY : PGVariantType;
  begin
    G_VARIANT_TYPE_STRING_ARRAY:=PGVariantType('as');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_OBJECT_PATH_ARRAY : PGVariantType;
  begin
    G_VARIANT_TYPE_OBJECT_PATH_ARRAY:=PGVariantType('ao');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_BYTESTRING : PGVariantType;
  begin
    G_VARIANT_TYPE_BYTESTRING:=PGVariantType('ay');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_BYTESTRING_ARRAY : PGVariantType;
  begin
    G_VARIANT_TYPE_BYTESTRING_ARRAY:=PGVariantType('aay');
  end;

{ was #define dname def_expr }
function G_VARIANT_TYPE_VARDICT : PGVariantType;
  begin
    G_VARIANT_TYPE_VARDICT:=PGVariantType('a{sv}');
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function G_VARIANT_TYPE(type_string : longint) : longint;
begin
  G_VARIANT_TYPE:=g_variant_type_checked_(type_string);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function G_VARIANT_TYPE(type_string : longint) : PGVariantType;
begin
  G_VARIANT_TYPE:=PGVariantType(type_string);
end;


end.
